--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,18 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
   dots_indicator: ^4.0.1
+  firebase_auth: ^5.5.2
+  firebase_core: ^3.13.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.0
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.17
+  get_it: ^8.0.3
+  modal_progress_hud_nsn: ^0.5.1
   shared_preferences: ^2.5.2
 
 dev_dependencies:
