--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^5.6.7
+  crypto: ^3.0.6
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   dots_indicator: ^4.0.1
@@ -36,12 +38,15 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_facebook_auth: ^7.1.1
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.17
   get_it: ^8.0.3
+  google_sign_in: ^6.3.0
   modal_progress_hud_nsn: ^0.5.1
   shared_preferences: ^2.5.2
+  sign_in_with_apple: ^7.0.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
