--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   get_it: ^8.0.3
   google_sign_in: ^6.3.0
   modal_progress_hud_nsn: ^0.5.1
+  provider: ^6.1.5+1
   shared_preferences: ^2.5.2
   sign_in_with_apple: ^7.0.1
   skeletonizer: ^2.1.0+1
