--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   shared_preferences: ^2.5.2
   sign_in_with_apple: ^7.0.1
   skeletonizer: ^2.1.0+1
+  uuid: ^4.5.2
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
